Extra controller removed Bug fix web.php Login message translated Login/register words visible without hover

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -28,10 +28,6 @@ body{
    padding: 0 20px;
 }
 
-.navbar ul li a{
-    color: white;
-}
-
 .CP{
     width: 50px;
     height: 50px;
